kclvm/loader/src/snapshots/kclvm_loader__tests__builtin_call_0.snap
---
source: loader/src/tests.rs
assertion_line: 37
expression: "format! (\"{:#?}\", p.symbols.values())"
---
[
    SymbolInfo {
        ty: Type {
            kind: Function(
                FunctionType {
                    doc: "Prints the values to a stream, or to the system stdout by default.\nOptional keyword arguments:\nsep:   string inserted between values, default a space.\nend:   string appended after the last value, default a newline.",
                    params: [],
                    self_ty: None,
                    return_ty: Type {
                        kind: None,
                        is_type_alias: false,
                        flags: NONE,
                    },
                    is_variadic: true,
                    kw_only_index: None,
                },
            ),
            is_type_alias: false,
            flags: FUNCTION,
        },
        name: "print",
        range: (
            Position {
                filename: "test.k",
                line: 1,
                column: Some(
                    0,
                ),
            },
            Position {
                filename: "test.k",
                line: 1,
                column: Some(
                    5,
                ),
            },
        ),
        owner: None,
        def: Some(
            SymbolRef {
                id: Index {
                    index: 1,
                    generation: 0,
                },
                kind: Function,
            },
        ),
        attrs: [],
        is_global: false,
    },
    SymbolInfo {
        ty: Type {
            kind: StrLit(
                "hello world",
            ),
            is_type_alias: false,
            flags: STR | LITERAL,
        },
        name: "@StringLitExpression",
        range: (
            Position {
                filename: "test.k",
                line: 1,
                column: Some(
                    19,
                ),
            },
            Position {
                filename: "test.k",
                line: 1,
                column: Some(
                    19,
                ),
            },
        ),
        owner: None,
        def: Some(
            SymbolRef {
                id: Index {
                    index: 0,
                    generation: 0,
                },
                kind: Expression,
            },
        ),
        attrs: [
            SymbolRef {
                id: Index {
                    index: 148,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 149,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 150,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 151,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 152,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 153,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 154,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 155,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 156,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 157,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 158,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 159,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 160,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 161,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 162,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 163,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 164,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 165,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 166,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 167,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 168,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 169,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 170,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 171,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 172,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 173,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 174,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 175,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 176,
                    generation: 0,
                },
                kind: Function,
            },
            SymbolRef {
                id: Index {
                    index: 177,
                    generation: 0,
                },
                kind: Function,
            },
        ],
        is_global: false,
    },
    SymbolInfo {
        ty: Type {
            kind: None,
            is_type_alias: false,
            flags: NONE,
        },
        name: "@CallExpression",
        range: (
            Position {
                filename: "test.k",
                line: 1,
                column: Some(
                    20,
                ),
            },
            Position {
                filename: "test.k",
                line: 1,
                column: Some(
                    20,
                ),
            },
        ),
        owner: None,
        def: Some(
            SymbolRef {
                id: Index {
                    index: 1,
                    generation: 0,
                },
                kind: Expression,
            },
        ),
        attrs: [],
        is_global: false,
    },
]
