kclvm/loader/src/snapshots/kclvm_loader__tests__list_options_1.snap
---
source: loader/src/tests.rs
expression: "format!(\"{:#?}\", options)"
---
[
    OptionHelp {
        name: "key1",
        ty: "str",
        required: false,
        default_value: "",
        help: "",
    },
    OptionHelp {
        name: "key2",
        ty: "int",
        required: false,
        default_value: "",
        help: "",
    },
]
