kclvm/loader/src/snapshots/kclvm_loader__tests__list_options_3.snap
---
source: loader/src/tests.rs
expression: "format!(\"{:#?}\", options)"
---
[
    OptionHelp {
        name: "key1",
        ty: "int",
        required: false,
        default_value: "123",
        help: "help me",
    },
]
